# nodemono2

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  alpine_with_bash.lock.json  alpine_with_bash.yaml  go.mod  go.sum  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
bzl/: defs.bzl  next.bzl  strip_virtual_imports.bzl
bzl/gazelle/: BUILD.bazel
bzl/private/: ts_proto_library.bzl
pkg/protobuf_ts_lang/: BUILD.bazel  lang.go  proto.go
proto/src/: BUILD.bazel  MODULE.bazel
proto/src/google/actions/sdk/v2/: BUILD.bazel
proto/src/google/actions/type/: BUILD.bazel
proto/src/google/ai/generativelanguage/v1/: BUILD.bazel
proto/src/google/ai/generativelanguage/v1beta/: BUILD.bazel
proto/src/google/ai/generativelanguage/v1beta2/: BUILD.bazel
proto/src/google/ai/generativelanguage/v1beta3/: BUILD.bazel
proto/src/google/analytics/admin/v1alpha/: BUILD.bazel
proto/src/google/analytics/admin/v1beta/: BUILD.bazel
proto/src/google/analytics/data/v1alpha/: BUILD.bazel
proto/src/google/analytics/data/v1beta/: BUILD.bazel
proto/src/google/api/: BUILD.bazel
proto/src/google/api/apikeys/v2/: BUILD.bazel
proto/src/google/api/cloudquotas/v1/: BUILD.bazel
proto/src/google/api/expr/conformance/v1alpha1/: BUILD.bazel
proto/src/google/api/expr/v1alpha1/: BUILD.bazel
proto/src/google/api/expr/v1beta1/: BUILD.bazel
proto/src/google/api/servicecontrol/v1/: BUILD.bazel
proto/src/google/api/servicecontrol/v2/: BUILD.bazel
proto/src/google/api/servicemanagement/v1/: BUILD.bazel
proto/src/google/api/serviceusage/v1/: BUILD.bazel
proto/src/google/api/serviceusage/v1beta1/: BUILD.bazel
proto/src/google/appengine/legacy/: BUILD.bazel
proto/src/google/appengine/logging/v1/: BUILD.bazel
proto/src/google/appengine/v1/: BUILD.bazel
proto/src/google/appengine/v1beta/: BUILD.bazel
proto/src/google/apps/alertcenter/v1beta1/: BUILD.bazel
proto/src/google/apps/card/v1/: BUILD.bazel
proto/src/google/apps/market/v2/: BUILD.bazel
proto/src/google/apps/meet/v2/: BUILD.bazel
proto/src/google/apps/meet/v2beta/: BUILD.bazel
proto/src/google/apps/script/type/: BUILD.bazel
proto/src/google/area120/tables/v1alpha1/: BUILD.bazel
proto/src/google/assistant/embedded/v1alpha1/: BUILD.bazel
proto/src/google/assistant/embedded/v1alpha2/: BUILD.bazel
proto/src/google/bigtable/admin/v2/: BUILD.bazel
proto/src/google/bigtable/v2/: BUILD.bazel
proto/src/google/bytestream/: BUILD.bazel
proto/src/google/chat/logging/v1/: BUILD.bazel
proto/src/google/chat/v1/: BUILD.bazel
proto/src/google/chromeos/moblab/v1beta1/: BUILD.bazel
proto/src/google/chromeos/uidetection/v1/: BUILD.bazel
proto/src/google/container/v1/: BUILD.bazel
proto/src/google/container/v1alpha1/: BUILD.bazel
proto/src/google/container/v1beta1/: BUILD.bazel
proto/src/google/dataflow/v1beta3/: BUILD.bazel
proto/src/google/datastore/admin/v1/: BUILD.bazel
proto/src/google/datastore/admin/v1beta1/: BUILD.bazel
proto/src/google/datastore/v1/: BUILD.bazel
proto/src/google/datastore/v1beta3/: BUILD.bazel
proto/src/google/devtools/artifactregistry/v1/: BUILD.bazel
proto/src/google/devtools/artifactregistry/v1beta2/: BUILD.bazel
proto/src/google/devtools/cloudbuild/v1/: BUILD.bazel
proto/src/google/devtools/cloudbuild/v2/: BUILD.bazel
proto/src/google/devtools/clouddebugger/v2/: BUILD.bazel
proto/src/google/devtools/clouderrorreporting/v1beta1/: BUILD.bazel
proto/src/google/devtools/cloudprofiler/v2/: BUILD.bazel
proto/src/google/devtools/cloudtrace/v1/: BUILD.bazel
proto/src/google/devtools/cloudtrace/v2/: BUILD.bazel
proto/src/google/devtools/containeranalysis/v1/: BUILD.bazel
proto/src/google/devtools/containeranalysis/v1beta1/: BUILD.bazel
proto/src/google/devtools/remoteworkers/v1test2/: BUILD.bazel
proto/src/google/devtools/resultstore/v2/: BUILD.bazel
proto/src/google/devtools/source/v1/: BUILD.bazel
proto/src/google/devtools/sourcerepo/v1/: BUILD.bazel
proto/src/google/devtools/testing/v1/: BUILD.bazel
proto/src/google/example/endpointsapis/v1/: BUILD.bazel
proto/src/google/firestore/admin/v1/: BUILD.bazel
proto/src/google/firestore/admin/v1beta1/: BUILD.bazel
proto/src/google/firestore/admin/v1beta2/: BUILD.bazel
proto/src/google/firestore/bundle/: BUILD.bazel
proto/src/google/firestore/v1/: BUILD.bazel
proto/src/google/firestore/v1beta1/: BUILD.bazel
proto/src/google/genomics/v1/: BUILD.bazel
proto/src/google/genomics/v1alpha2/: BUILD.bazel
proto/src/google/geo/type/: BUILD.bazel
proto/src/google/home/graph/v1/: BUILD.bazel
proto/src/google/iam/admin/v1/: BUILD.bazel
proto/src/google/iam/credentials/v1/: BUILD.bazel
proto/src/google/iam/v1/: BUILD.bazel
proto/src/google/iam/v1/logging/: BUILD.bazel
proto/src/google/iam/v1beta/: BUILD.bazel
proto/src/google/iam/v2/: BUILD.bazel
proto/src/google/iam/v2beta/: BUILD.bazel
proto/src/google/identity/accesscontextmanager/type/: BUILD.bazel
proto/src/google/identity/accesscontextmanager/v1/: BUILD.bazel
proto/src/google/logging/type/: BUILD.bazel
proto/src/google/logging/v2/: BUILD.bazel
proto/src/google/longrunning/: BUILD.bazel
proto/src/google/maps/addressvalidation/v1/: BUILD.bazel
proto/src/google/maps/aerialview/v1/: BUILD.bazel
proto/src/google/maps/fleetengine/v1/: BUILD.bazel
proto/src/google/maps/mapsplatformdatasets/v1/: BUILD.bazel
proto/src/google/maps/unity/: BUILD.bazel
proto/src/google/monitoring/v3/: BUILD.bazel
proto/src/google/pubsub/v1/: BUILD.bazel
proto/src/google/pubsub/v1beta2/: BUILD.bazel
proto/src/google/rpc/: BUILD.bazel
proto/src/google/rpc/context/: BUILD.bazel
proto/src/google/shopping/type/: BUILD.bazel
proto/src/google/spanner/v1/: BUILD.bazel
proto/src/google/storage/v1/: BUILD.bazel
proto/src/google/storage/v2/: BUILD.bazel
proto/src/google/storagetransfer/logging/: BUILD.bazel
proto/src/google/storagetransfer/v1/: BUILD.bazel
proto/src/google/type/: BUILD.bazel
proto/src/google/watcher/v1/: BUILD.bazel
proto/src/grafeas/v1/: BUILD.bazel
(+59 files in other folders)
