load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_apko//apko:defs.bzl", "apko_bazelrc")

apko_bazelrc()

exports_files([
    "alpine_with_bash.yaml",
    "alpine_with_bash.lock.json",
])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

npm_link_package(
    name = "node_modules/@nodemono2/lib1",
    src = "//packages/lib1",
    visibility = ["//visibility:public"],
)

npm_link_package(
    name = "node_modules/@nodemono2/lib2",
    src = "//packages/lib2",
    visibility = ["//visibility:public"],
)

npm_link_package(
    name = "node_modules/@nodemono2/proto",
    src = "//packages/proto",
    visibility = ["//visibility:public"],
)

npm_link_all_packages(name = "node_modules")

# gazelle:prefix github.com/be9/nodemono2
gazelle(
    name = "gazelle",
    gazelle = "//bzl/gazelle",
)

# gazelle:ignore
