load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "annotations_proto",
    srcs = ["annotations.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":http_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)

proto_library(
    name = "auth_proto",
    srcs = ["auth.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "backend_proto",
    srcs = ["backend.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "billing_proto",
    srcs = ["billing.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "client_proto",
    srcs = ["client.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":launch_stage_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
    ],
)

proto_library(
    name = "config_change_proto",
    srcs = ["config_change.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "consumer_proto",
    srcs = ["consumer.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "context_proto",
    srcs = ["context.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "control_proto",
    srcs = ["control.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [":policy_proto"],
)

proto_library(
    name = "distribution_proto",
    srcs = ["distribution.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "documentation_proto",
    srcs = ["documentation.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "endpoint_proto",
    srcs = ["endpoint.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "error_reason_proto",
    srcs = ["error_reason.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "field_behavior_proto",
    srcs = ["field_behavior.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

proto_library(
    name = "field_info_proto",
    srcs = ["field_info.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

proto_library(
    name = "http_proto",
    srcs = ["http.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "httpbody_proto",
    srcs = ["httpbody.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

proto_library(
    name = "label_proto",
    srcs = ["label.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "launch_stage_proto",
    srcs = ["launch_stage.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "log_proto",
    srcs = ["log.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [":label_proto"],
)

proto_library(
    name = "logging_proto",
    srcs = ["logging.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "metric_proto",
    srcs = ["metric.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":label_proto",
        ":launch_stage_proto",
        "@com_google_protobuf//:duration_proto",
    ],
)

proto_library(
    name = "monitored_resource_proto",
    srcs = ["monitored_resource.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":label_proto",
        ":launch_stage_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

proto_library(
    name = "monitoring_proto",
    srcs = ["monitoring.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "policy_proto",
    srcs = ["policy.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

proto_library(
    name = "quota_proto",
    srcs = ["quota.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "resource_proto",
    srcs = ["resource.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

proto_library(
    name = "routing_proto",
    srcs = ["routing.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = [
        ":auth_proto",
        ":backend_proto",
        ":billing_proto",
        ":client_proto",
        ":context_proto",
        ":control_proto",
        ":documentation_proto",
        ":endpoint_proto",
        ":http_proto",
        ":log_proto",
        ":logging_proto",
        ":metric_proto",
        ":monitored_resource_proto",
        ":monitoring_proto",
        ":quota_proto",
        ":source_info_proto",
        ":system_parameter_proto",
        ":usage_proto",
        "@com_google_protobuf//:api_proto",
        "@com_google_protobuf//:type_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library(
    name = "source_info_proto",
    srcs = ["source_info.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

proto_library(
    name = "system_parameter_proto",
    srcs = ["system_parameter.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "usage_proto",
    srcs = ["usage.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "visibility_proto",
    srcs = ["visibility.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

ts_proto_library(
    name = "annotations_proto_ts",
    proto = ":annotations_proto",
)

ts_proto_library(
    name = "auth_proto_ts",
    proto = ":auth_proto",
)

ts_proto_library(
    name = "backend_proto_ts",
    proto = ":backend_proto",
)

ts_proto_library(
    name = "billing_proto_ts",
    proto = ":billing_proto",
)

ts_proto_library(
    name = "client_proto_ts",
    proto = ":client_proto",
)

ts_proto_library(
    name = "config_change_proto_ts",
    proto = ":config_change_proto",
)

ts_proto_library(
    name = "consumer_proto_ts",
    proto = ":consumer_proto",
)

ts_proto_library(
    name = "context_proto_ts",
    proto = ":context_proto",
)

ts_proto_library(
    name = "control_proto_ts",
    proto = ":control_proto",
)

ts_proto_library(
    name = "distribution_proto_ts",
    proto = ":distribution_proto",
)

ts_proto_library(
    name = "documentation_proto_ts",
    proto = ":documentation_proto",
)

ts_proto_library(
    name = "endpoint_proto_ts",
    proto = ":endpoint_proto",
)

ts_proto_library(
    name = "error_reason_proto_ts",
    proto = ":error_reason_proto",
)

ts_proto_library(
    name = "field_behavior_proto_ts",
    proto = ":field_behavior_proto",
)

ts_proto_library(
    name = "field_info_proto_ts",
    proto = ":field_info_proto",
)

ts_proto_library(
    name = "http_proto_ts",
    proto = ":http_proto",
)

ts_proto_library(
    name = "httpbody_proto_ts",
    proto = ":httpbody_proto",
)

ts_proto_library(
    name = "label_proto_ts",
    proto = ":label_proto",
)

ts_proto_library(
    name = "launch_stage_proto_ts",
    proto = ":launch_stage_proto",
)

ts_proto_library(
    name = "log_proto_ts",
    proto = ":log_proto",
)

ts_proto_library(
    name = "logging_proto_ts",
    proto = ":logging_proto",
)

ts_proto_library(
    name = "metric_proto_ts",
    proto = ":metric_proto",
)

ts_proto_library(
    name = "monitored_resource_proto_ts",
    proto = ":monitored_resource_proto",
)

ts_proto_library(
    name = "monitoring_proto_ts",
    proto = ":monitoring_proto",
)

ts_proto_library(
    name = "policy_proto_ts",
    proto = ":policy_proto",
)

ts_proto_library(
    name = "quota_proto_ts",
    proto = ":quota_proto",
)

ts_proto_library(
    name = "resource_proto_ts",
    proto = ":resource_proto",
)

ts_proto_library(
    name = "routing_proto_ts",
    proto = ":routing_proto",
)

ts_proto_library(
    name = "service_proto_ts",
    proto = ":service_proto",
)

ts_proto_library(
    name = "source_info_proto_ts",
    proto = ":source_info_proto",
)

ts_proto_library(
    name = "system_parameter_proto_ts",
    proto = ":system_parameter_proto",
)

ts_proto_library(
    name = "usage_proto_ts",
    proto = ":usage_proto",
)

ts_proto_library(
    name = "visibility_proto_ts",
    proto = ":visibility_proto",
)
