load("@rules_proto//proto:defs.bzl", "proto_library")
load("@nodemono2//bzl:defs.bzl", "ts_proto_library")

proto_library(
    name = "bytestream_proto",
    srcs = ["bytestream.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "bytestream_proto_ts",
    has_services = True,
    proto = ":bytestream_proto",
)
